Add a few missing files to the VS project. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5600 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj.filters
+++ b/polymer/eduke32/eduke32.vcxproj.filters
@@ -504,6 +504,9 @@
     <ClInclude Include="build\include\md4.h">
       <Filter>build\headers</Filter>
     </ClInclude>
+    <ClInclude Include="source\mpu401.h">
+      <Filter>eduke32\headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="build\src\a-c.c">
