--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="source\lunatic\lunatic_m32.h" />
     <ClInclude Include="source\m32def.h" />
     <ClInclude Include="source\menus.h" />
+    <ClInclude Include="source\mpu401.h" />
     <ClInclude Include="source\net.h" />
     <ClInclude Include="source\player.h" />
     <ClInclude Include="source\premap.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="source\savegame.h" />
     <ClInclude Include="source\sector.h" />
     <ClInclude Include="source\_functio.h" />
+    <ClInclude Include="source\_midi.h" />
     <ClInclude Include="source\_rts.h" />
     <ClInclude Include="source\config.h" />
     <ClInclude Include="source\duke3d.h" />
