Add -fno-lto-odr-type-merging to LTO builds to disable a feature that generates a warning in newer versions of GCC
git-svn-id: http://svn.eduke32.com/eduke32@5610 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -471,7 +471,7 @@ ifneq (0,$(RELEASE))
 
     ifneq (0,$(LTO))
         COMPILERFLAGS += -DUSING_LTO
-        COMMONFLAGS += -flto
+        COMMONFLAGS += -flto -fno-lto-odr-type-merging
     endif
 else
     ## Debugging enabled
