Break cheat code stuff out of game.c and into cheats.c/h. Remove unnecessary header includes from several modules (all relevant headers are already pulled in by duke3d.h).
git-svn-id: http://svn.eduke32.com/eduke32@5611 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -195,6 +195,7 @@ DUKE3D_OBJS=$(DUKE3D_OBJ)\game.$o \
 	$(DUKE3D_OBJ)\anim.$o \
 	$(DUKE3D_OBJ)\animsounds.$o \
 	$(DUKE3D_OBJ)\animvpx.$o \
+        $(DUKE3D_OBJ)\cheats.$o \
 	$(DUKE3D_OBJ)\common.$o \
 	$(DUKE3D_OBJ)\demo.$o \
 	$(DUKE3D_OBJ)\gamedef.$o \
