--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="source\anim.h" />
     <ClInclude Include="source\animsounds.h" />
     <ClInclude Include="source\animvpx.h" />
+    <ClInclude Include="source\cheats.h" />
     <ClInclude Include="source\common_game.h" />
     <ClInclude Include="source\demo.h" />
     <ClInclude Include="source\events_defs.h" />
@@ -304,6 +305,7 @@
     <ClCompile Include="source\animsounds.c" />
     <ClCompile Include="source\animvpx.c" />
     <ClCompile Include="source\astub.c" />
+    <ClCompile Include="source\cheats.c" />
     <ClCompile Include="source\config.c" />
     <ClCompile Include="source\common.c" />
     <ClCompile Include="source\demo.c" />
@@ -347,7 +349,6 @@
     <ClCompile Include="source\startgtk.game.c" />
     <ClCompile Include="source\startwin.game.c" />
     <ClCompile Include="source\winbits.c" />
-    <ClCompile Include="source\wrapper.c" />
     <ClCompile Include="source\jaudiolib\src\driver_directsound.c" />
     <ClCompile Include="source\jaudiolib\src\driver_nosound.c" />
     <ClCompile Include="source\jaudiolib\src\driver_sdl.c" />
