Break all of the text printing stuff out of game.c and into a separate screentext.c/h
git-svn-id: http://svn.eduke32.com/eduke32@5614 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj.filters
+++ b/polymer/eduke32/eduke32.vcxproj.filters
@@ -516,6 +516,9 @@
     <ClInclude Include="source\sbar.h">
       <Filter>eduke32\source\editor</Filter>
     </ClInclude>
+    <ClInclude Include="source\screentext.h">
+      <Filter>eduke32\headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="build\src\a-c.c">
@@ -903,6 +906,9 @@
       <Filter>eduke32\source</Filter>
     </ClCompile>
     <ClCompile Include="source\sbar.c">
+      <Filter>eduke32\source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\screentext.c">
       <Filter>eduke32\source</Filter>
     </ClCompile>
   </ItemGroup>
