--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="source\quotes.h" />
     <ClInclude Include="source\savegame.h" />
     <ClInclude Include="source\sbar.h" />
+    <ClInclude Include="source\screentext.h" />
     <ClInclude Include="source\sector.h" />
     <ClInclude Include="source\_functio.h" />
     <ClInclude Include="source\_midi.h" />
@@ -343,6 +344,7 @@
     <ClCompile Include="source\rts.c" />
     <ClCompile Include="source\savegame.c" />
     <ClCompile Include="source\sbar.c" />
+    <ClCompile Include="source\screentext.c" />
     <ClCompile Include="source\sdlmusic.c" />
     <ClCompile Include="source\sector.c" />
     <ClCompile Include="source\sounds.c" />
