--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -198,6 +198,8 @@ DUKE3D_OBJS=$(DUKE3D_OBJ)\game.$o \
         $(DUKE3D_OBJ)\cheats.$o \
         $(DUKE3D_OBJ)\sbar.$o \
         $(DUKE3D_OBJ)\screentext.$o \
+        $(DUKE3D_OBJ)\screens.$o \
+        $(DUKE3D_OBJ)\cmdline.$o \
 	$(DUKE3D_OBJ)\common.$o \
 	$(DUKE3D_OBJ)\demo.$o \
 	$(DUKE3D_OBJ)\gamedef.$o \
