Remove -fno-lto-odr-type-merging, turns out it's an obscure option that isn't enabled in the synthesis toolchain. Oh well.
git-svn-id: http://svn.eduke32.com/eduke32@5622 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -660,11 +660,11 @@ ifeq (1,$(strip $(shell expr $(GCC_MAJOR) \>= 4)))
     L_SSP := -lssp
 endif
 
-ifeq (1,$(strip $(shell expr $(GCC_MAJOR) \>= 5)))
-    ifneq (0,$(LTO))
-        COMMONFLAGS += -fno-lto-odr-type-merging
-    endif
-endif
+# ifeq (1,$(strip $(shell expr $(GCC_MAJOR) \>= 5)))
+#     ifneq (0,$(LTO))
+#         COMMONFLAGS += -fno-lto-odr-type-merging
+#     endif
+# endif
 
 # NOTE: If your setup doesn't have libstdc++, you can try using libsupc++.
 # Search for STDCPPLIB below and change it to -lsupc++.
