--- a/polymer/eduke32/platform/Apple/iOS/Info.plist
+++ b/polymer/eduke32/platform/Apple/iOS/Info.plist
@@ -32,6 +32,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UIStatusBarStyle</key>
