--- a/polymer/eduke32/source/misc/gameres.rc
+++ b/polymer/eduke32/source/misc/gameres.rc
@@ -77,8 +77,4 @@ BEGIN
     END
 END
 
-#if defined(_M_X64) || defined(__amd64__) || defined(__x86_64__)
-1 24 "64/manifest.game.xml"
-#else
-1 24 "32/manifest.game.xml"
-#endif
+1 24 "manifest.game.xml"
