--- a/polymer/eduke32/source/testgame/rsrc/buildres.rc
+++ b/polymer/eduke32/source/testgame/rsrc/buildres.rc
@@ -68,8 +68,4 @@ BEGIN
     END
 END
 
-#if defined(_M_X64) || defined(__amd64__) || defined(__x86_64__)
-1 24 "64/manifest.build.xml"
-#else
-1 24 "32/manifest.build.xml"
-#endif
+1 24 "manifest.build.xml"
