Android stuff. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5661 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="source\gamevars.h" />
     <ClInclude Include="source\global.h" />
     <ClInclude Include="source\input.h" />
+    <ClInclude Include="source\inv.h" />
     <ClInclude Include="source\jaudiolib\include\drivers.h" />
     <ClInclude Include="source\lunatic\lunatic_game.h" />
     <ClInclude Include="source\lunatic\lunatic_m32.h" />
