OS X: Only build the SDLMain object with SDL 1.2.
git-svn-id: http://svn.eduke32.com/eduke32@5691 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -58,8 +58,10 @@ ifeq ($(PLATFORM),DARWIN)
     ifneq (0,$(OSX_STARTUPWINDOW))
         ENGINE_EDITOR_OBJS += startosx.editor
     endif
-    ifeq (1,$(SDL_FRAMEWORK))
-        ENGINE_OBJS+=SDLMain
+    ifeq ($(SDL_TARGET),1)
+        ifeq (1,$(SDL_FRAMEWORK))
+            ENGINE_OBJS+=SDLMain
+        endif
     endif
 endif
 ifeq ($(PLATFORM),WINDOWS)
