KenBuild: Fix OS X build.
git-svn-id: http://svn.eduke32.com/eduke32@5740 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -210,6 +210,12 @@ ifeq ($(PLATFORM),WINDOWS)
 	TESTEDITOR_OBJS+= buildres
 endif
 
+ifeq ($(PLATFORM),DARWIN)
+    ifneq (0,$(OSX_STARTUPWINDOW))
+        TESTGAME_OBJS += StartupWinController.game
+    endif
+endif
+
 TESTGAME_OBJS_EXP:=$(addprefix $(TESTGAME_OBJ)/,$(addsuffix .$o,$(TESTGAME_OBJS)))
 TESTEDITOR_OBJS_EXP:=$(addprefix $(TESTGAME_OBJ)/,$(addsuffix .$o,$(TESTEDITOR_OBJS)))
 
@@ -673,7 +679,7 @@ $(TESTGAME_OBJ)/%.$o: $(TESTGAME_SRC)/%.c | $(TESTGAME_OBJ)
 
 $(TESTGAME_OBJ)/%.$o: $(TESTGAME_SRC)/%.m | $(TESTGAME_OBJ)
 	$(COMPILE_STATUS)
-	$(RECIPE_IF) $(COMPILER) $(COMMONFLAGS) $(COMPILERFLAGS) $(TESTGAME_CFLAGS) -c $< -o $@ $(RECIPE_RESULT_COMPILE)
+	$(RECIPE_IF) $(COMPILER_OBJC) $(COMMONFLAGS) $(COMPILERFLAGS) $(TESTGAME_CFLAGS) -c $< -o $@ $(RECIPE_RESULT_COMPILE)
 
 $(TESTGAME_OBJ)/%.$o: $(TESTGAME_RSRC)/%.rc | $(TESTGAME_OBJ)
 	$(COMPILE_STATUS)
@@ -725,7 +731,7 @@ $(SW_OBJ)/%.$o: $(SW_SRC)/%.c | $(SW_OBJ)
 
 $(SW_OBJ)/%.$o: $(SW_SRC)/%.m | $(SW_OBJ)
 	$(COMPILE_STATUS)
-	$(RECIPE_IF) $(COMPILER) $(COMMONFLAGS) $(COMPILERFLAGS) $(SW_CFLAGS) -c $< -o $@ $(RECIPE_RESULT_COMPILE)
+	$(RECIPE_IF) $(COMPILER_OBJC) $(COMMONFLAGS) $(COMPILERFLAGS) $(SW_CFLAGS) -c $< -o $@ $(RECIPE_RESULT_COMPILE)
 
 $(SW_OBJ)/%.$o: $(SW_RSRC)/%.rc | $(SW_OBJ)
 	$(COMPILE_STATUS)
